hotfix: fix constructors and dependencies for classes